# sct_invoice

./: .cursorrules  .gitignore  .pre-commit-config.yaml  01_PIPELINE_OVERVIEW_20251019.md  02_PIPE1_DETAILED_REPORT_20251019.md  CHANGELOG.md  PIPELINE_EXECUTION_REPORT_20251019.md  QUICK_START_GUIDE.md  README.md  RULES_MIGRATION_GUIDE.md  SYSTEM GRAPH.MD  WORK_COMPLETION_FINAL_REPORT_20251019.md  analyze_agi_columns.py  check_consistency.py  ml-systems-integration-tdd.plan.md  p.md  p3.md  p5.md  test_simple.py
.github/: CODEOWNERS
HVDC_Invoice_Audit/: .cursorrules.project  .gitignore  FILE_STRUCTURE_FINAL.md  HONCHO_EXECUTION_GUIDE.md  Procfile.dev  QUICK_START.md  README.md  README_WSL2_SETUP.md  REDIS_INSTALLATION_GUIDE.md  ROOT_LEVEL_CLEANUP_COMPLETE_REPORT.md  WORK_COMPLETION_FINAL_SUMMARY.md  config_domestic_v2.json  docker-compose-integrated.yaml  docker-compose.hvdc.yaml  env.hvdc.example  env.sample  requirements_hybrid.txt  restart_hybrid_system.sh  start_hybrid_system.sh  test_redis_connection.py
HVDC_Pipeline_Final_Results_20251019/: README.md
HVDC_Pipeline_Final_Results_20251019_New/: README.md
ML/: .cursorrules.project  ENHANCED_INTEGRATION_GUIDE.md  Executive Summary.MD  IMPLEMENTATION_REPORT.md  INTEGRATION_GUIDE.md  (+19 more)
rule/: .pre-commit-config.yaml  CODEOWNERS  README.md  plan.md  pyproject.toml
rule/.github/workflows/: ci.yml
rule/docs/: AGENTS.md  HVDC_INVOICE_README.md
rule/spec/tests/: test_app.py
rule/src/: __init__.py
rule/src/core/: app.py
rule/tests/: test_app_runs.py  test_scaffold_exists.py
rule/tools/: init_settings.py
(+603 files in other folders)
