[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvdc-cursor-settings"
version = "2.0.0"
description = "HVDC-tailored Cursor settings (rules/commands/CI) with Enhanced Visualization"
requires-python = ">=3.13"
readme = "README.md"
authors = [{name="HVDC Team", email="[email protected]"}]
dependencies = [
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
visualization = [
    "mermaid-cli>=10.0.0",
    "graphviz>=0.20.0",
    "cytoscape>=3.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
